# GSML

./: CMakeLists.txt  LICENSE  main.cpp
src/concepts/: matrix.cpp
src/nn/: conv.cpp  dense.cpp  layer.cpp  nn.cpp  pooling.cpp
src/nn/activation/: relu.cpp  sigmoid.cpp  tanh.cpp
src/nn/loss/: cel.cpp  mse.cpp  sse.cpp
src/nn/optimizer/: adam.cpp  optimizer.cpp
